--- a/views/student/quiz/2_Datatype_and_Variable-quiz.ejs
+++ b/views/student/quiz/2_Datatype_and_Variable-quiz.ejs
@@ -544,9 +544,7 @@
                     <iframe src="https://drive.google.com/file/d/15JtyzFIcjkP-t5ioDrPaece38SmBv4No/preview" width="100%" height="600" allow="autoplay"></iframe>
                 </div>
                     <div class="form-group">
-                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด
-                    </button><br>
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                     <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="code" required></textarea>
 
                 </div>
@@ -561,9 +559,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด
-                        </button><br>  
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                         <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" name="sendLink16" type="text" rows="10" required></textarea>
                             </div>
                 <br><br>
@@ -577,9 +573,7 @@
                     <iframe src="https://drive.google.com/file/d/1osQnRL5Jqkc4xR3FHW5vw17JXqgGcfAW/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
                 </div>    
                 <div class="form-group">
-                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด
-                    </button><br>
+                    <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                     <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
 
                     </div>
@@ -595,9 +589,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด
-                        </button>
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                         <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" name="sendLink172" type="text" rows="10" required></textarea>
                     </div>
                 <br><br>
@@ -611,9 +603,7 @@
                     <iframe src="https://drive.google.com/file/d/1KUivgO6uXy1YT9iw0aNTGeDNyEiz_CPT/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
                 </div>
                 <div class="form-group">
-                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด
-                    </button><br>
+                    <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                     <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
 
                     </div>
@@ -628,9 +618,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด
-                        </button><br>
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                         <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink182" required></textarea>
     
                         </div>
@@ -645,9 +633,7 @@
                     <iframe src="https://drive.google.com/file/d/1A4vDFT5BVSgZhqcdNHrdJXWvsFdA7fau/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
                 </div>
                 <div class="form-group">
-                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด
-                    </button><br>
+                    <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                     <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
 
                     </div>
@@ -661,9 +647,7 @@
                     (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>(ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด
-                        </button><br>
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                         <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink192" required></textarea>
     
                         </div>
@@ -678,9 +662,7 @@
                     <iframe src="https://drive.google.com/file/d/1CnAqlO3WcbvGuckORcpOyhaWT_vQdgR9/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
                     </div>
                     <div class="form-group">
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด
-                        </button><br>
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                         <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
     
                         </div>
@@ -695,9 +677,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด
-                        </button><br>
+                        <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
                         <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink202" required></textarea>
     
                         </div>
