--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -51,8 +51,10 @@
     </style>
     <a id="String "></a>
     <!-- MIDDLE 1 -->
+
     <div class="content">
         <div id = "content" class="container">
+            <br><br>
             <h2>บทที่ 2 Datatype and Variable</h2>
     <!--   C Language -->
             <div class="accordion" id="accordionParentSyntax">
@@ -70,45 +72,116 @@
                 
         <br><br>
         <div class="game">
-            <div class="c1">
-                <p id="demo4" class="head">ข้อ 4</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionT4()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
+            <!--* ข้อ 1 *-->
+            <div class="gamecontent">
+                <div  class="question">
+                <h5>ข้อมูลประเภท float ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
+                <br><br><p id="demo1"> </p>
                 </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
-                </div>
-            </div>
-            <div class="c1">
-                <p id="demo5" class="head">ข้อ 5</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>    
-                </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionT5()">Click</p>    
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW2()">10</p>  
+                        <p id="demo" class="button" onclick="myFunctionT1()">26.83</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW1()">“Hello World”</p>   
+                        <p id="demo" class="button" onclick="myFunctionW1()"> A </p>    
+                    </div></div>
+                    
                 </div>
             </div>
-            <div class="c1">
-                <p id="demo6" class="head">ข้อ 6</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+            
+            <!--* ข้อ 2 *-->
+            <div class="gamecontent">
+                <div  class="question">
+                <h5>ข้อใดประกาศตัวแปรประเภท double ในภาษา C ได้ถูกต้อง</h5>
+                <br><br><p id="demo2"> </p>
                 </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW2()"> float x = 10.5; </p>    
+                        <p id="demo" class="button" onclick="myFunctionW2()">int x = 10.5;</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT2()">double x = 10.5;</p>   
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW2()">char x = 10.5;</p>   
+                    </div>
+                </div>
+                    
+                </div>
+            </div>
+
+            <!--* ข้อ 3 *-->
+            <div class="gamecontent">
+                <div  class="question">
+                <h5>ข้อมูลประเภท char ในภาษา C ใช้เก็บข้อมูลชนิดใด</h5>
+                <br><br><p id="demo3"> </p>
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW3()">จำนวนเต็ม</p>    
+                        <p id="demo" class="button" onclick="myFunctionW3()">จำนวนทศนิยม</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW3()">ข้อความ</p>  
+                        <p id="demo" class="button" onclick="myFunctionT3()">ตัวอักขระ </p>  
+                    </div>
+                </div>
+                    
                 </div>
             </div>
         </div>
 
+        <div class="game">
+            <!--* ข้อ 6 *-->
+            <div class="gamecontent-M">
+                <div  class="question">
+                <h5>ตัวแปรในการเขียนโปรแกรมคืออะไร</h5>
+                <br><br><p id="demo6"> </p>
+                
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT6()">สถานที่เก็บข้อมูล</p>    
+                        <p id="demo" class="button" onclick="myFunctionW6()">ชื่อที่ใช้เรียกโปรแกรม</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW6()">คำสั่งในโปรแกรม</p>  
+                        <p id="demo" class="button" onclick="myFunctionW6()">ข้อความแสดงผล </p>  
+                    </div>
+                </div>
+                    
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+    
+            <!--<button class="click" onClick="window.location.reload();">Refresh Page</button>
+            
+            <div id="myDIV" style="height:400px; width:400px; display:none; align-items: flex-end;">
+                <img src="https://cdn-icons-png.flaticon.com/512/276/276126.png">
+            </div> 
+        
+            <p id="demo6" style="display: none;"><img src="https://cdn-icons-png.flaticon.com/512/276/276126.png"> </p>-->
+
+        </div>
+
         <br><br>
-        <!--
+        
         <button onclick="window.location.href='/course-Datatype_and_Variable-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h4><u>แบบทดสอบหลังเรียน</h2></u></button>-->
+        <h4><u>แบบทดสอบหลังเรียน</h2></u></button>
         
 
         
