--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -71,7 +71,7 @@
         <br><br>
         <div class="game">
             <div class="c1">
-                <p id="demo4" class="head">ข้อ 4</p>
+                <p id="demo1" class="head">ข้อ 1</p>
                 <div class="row">
                     <p id="demo" class="button" onclick="myFunctionT4()">Click</p>  
                     <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="c1">
-                <p id="demo5" class="head">ข้อ 5</p>
+                <p id="demo2" class="head">ข้อ 2</p>
                 <div class="row">
                     <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
                     <p id="demo" class="button" onclick="myFunctionW5()">Click</p>    
@@ -93,7 +93,150 @@
                 </div>
             </div>
             <div class="c1">
+                <p id="demo3" class="head">ข้อ 3</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo4" class="head">ข้อ 4</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo5" class="head">ข้อ 5</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
                 <p id="demo6" class="head">ข้อ 6</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo7" class="head">ข้อ 7</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo8" class="head">ข้อ 8</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo9" class="head">ข้อ 9</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo10" class="head">ข้อ 10</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo11" class="head">ข้อ 11</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo12" class="head">ข้อ 12</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo13" class="head">ข้อ 13</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo14" class="head">ข้อ 14</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo15" class="head">ข้อ 15</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo16" class="head">ข้อ 16</p>
                 <div class="row">
                     <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
                     <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
