--- a/views/student/quiz/3_Input_and_Output-quiz.ejs
+++ b/views/student/quiz/3_Input_and_Output-quiz.ejs
@@ -369,7 +369,7 @@
                 <h2>ข้อที่ 11 - 15: วัดความสามารถด้านการอธิบายโค้ด (Explaining)</h2>
                 <!-- ข้อ 11 -->
                 <div class="list-group">
-                    <p type="text" class="list-group-item p2" style="color: white;">
+                    <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
                         11. โค้ดดังต่อไปนี้ทำงานอย่างไร <br>
                         <b style="font-weight: lighter;"> 
                             &ensp;#include < stdio.h> <br>
@@ -403,7 +403,7 @@
                 </div><br>  
                 <!-- ข้อ 12  -->
                 <div class="list-group">
-                    <p type="text" class="list-group-item p2" style="color: white;">
+                    <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
                         12. โค้ดดังต่อไปนี้มีปัญหาเกี่ยวกับการแสดงข้อมูล อธิบายปัญหานี้และแนะนำวิธีแก้ไข <br>
                         <b style="font-weight: lighter;"> 
                             &ensp;#include < stdio.h> <br>
@@ -434,7 +434,7 @@
                 </div><br>  
                 <!-- ข้อ 13  -->
                 <div class="list-group">
-                    <p type="text" class="list-group-item p2" style="color: white;">
+                    <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
                         13.  โค้ดดังต่อไปนี้ทำงานอย่างไร <br>
                         <b style="font-weight: lighter;"> 
                             &ensp;#include < stdio.h> <br>
@@ -467,7 +467,7 @@
                 </div><br>  
                 <!-- ข้อ 14  -->
                 <div class="list-group">
-                    <p type="text" class="list-group-item p2" style="color: white;">
+                    <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
                         14. โค้ดดังต่อไปนี้มีปัญหาเกี่ยวกับการรับข้อมูลจากผู้ใช้ อธิบายปัญหานี้และแนะนำวิธีแก้ไข <br>
                         <b style="font-weight: lighter;"> 
                             &ensp;#include < stdio.h> <br>
@@ -500,7 +500,7 @@
                 </div><br>  
                 <!-- ข้อ 15 -->
                 <div class="list-group">
-                    <p type="text" class="list-group-item p2" style="color: white;">
+                    <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
                         15. โค้ดดังต่อไปนี้ทำงานอย่างไร <br>
                         <b style="font-weight: lighter;"> 
                             &ensp;#include < stdio.h> <br>
@@ -752,5 +752,5 @@
         </div>
     </div>
 </div>
-<script src="javascripts/lv3/3_Input_and_Output.js"></script>
+<!--<script src="javascripts/lv3/3_Input_and_Output.js"></script>-->
 <script src="javascripts/compilerStyle.js"></script>
